# SimpleSwitcher

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  build.cmd  build.py  build2.cmd  build_Win7_x86.cmd  build_wxWidgets.cmd  publish.cmd  publish.py  wxwidgets_update.cmd  wxwidgets_update.txt
.github/: FUNDING.yml
.github/workflows/: Publish.yml  build.yml  codeql-analysis.yml  flawfinder-analysis.yml  windows-build.yml
CheckSum/: CheckSum.vcxproj  ReadMe.txt  checksum.cpp  md5.cpp  md5.h  sha256.cpp  sha256.h  stdafx.cpp  stdafx.h
Localization_/: Program.cs  Russian.json
SimpleSwitcher/: .clang-format  .editorconfig  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  SimpleSwitcher.sln  common.props
SimpleSwitcher/SimpleSwitcher/: CAutoProcMonitor.h  CClipWorker.h  CMainWorker.cpp  CMainWorker.h  CaseAnalazer.h  ChangeHotKey.qml  ChangeHotKeyFrame.cpp  ChangeHotKeyFrame.h  ChangeHotKeyFrame.ui  CoreWorker.h  Dispatcher.cpp  Encrypter.h  Hooker.cpp  Hooker.h  InputSender.h  KeyTools.cpp  KeyTools.h  KeysStruct.h  LuaConfig.cpp  LuaConfig.h  PageMainQt.cpp  PageMainQt.h  ProcDll.h  QLineHotKey.cpp  QLineHotKey.h  Settings.cpp  Settings.h  SettingsGui.h  SimpleSwitcher.cpp  SimpleSwitcher.h  SimpleSwitcher.rc  SimpleSwitcher.vcxproj  SimpleSwitcher.vcxproj.filters  SimpleSwitcherQt.cpp  SimpleSwitcherQt.h  SimpleSwitcherQt.qrc  SimpleSwitcherQt.rc  SimpleSwitcherQt.ui  SimpleSwitcherQt.vcxproj  SimpleSwitcherQt.vcxproj.filters  (+43 more)
SimpleSwitcher/SimpleSwitcher/gen_ui/: noname.cpp  noname.h  test_proj.fbp
SimpleSwitcher/SimpleSwitcherDll/: SimpleSwitcherDll.cpp  SimpleSwitcherDll.def  SimpleSwitcherDll.rc  SimpleSwitcherDll.vcxproj  SimpleSwitcherDll.vcxproj.filters  dllmain.cpp  resource.h  stdafx.cpp  stdafx.h  targetver.h
SimpleSwitcher/SimpleSwitcherQt/: main.cpp
SimpleSwitcher/bin_files/flags/Round/: more_flags.txt
SimpleSwitcher/binfiles/: config.json  config.lua  config_future.lua  license.txt  license_future.txt  readme.txt
SimpleSwitcher/cert/: SignExe.cmd  SimpleSwitcher.cer  SimpleSwitcher.pfx
SimpleSwitcher/flags/scripts/: run.cmd
SimpleSwitcher/localization/: .gitignore  auto_translate.py  build_mo.py  collect_messages.cmd  flat.py  flat_apply.py  gen.cmd  gen.py  how_to_translate.txt  info.txt  init.cmd  mess.pot  ru.mo  ru.po  ru_RU.mo  ru_RU.po
SimpleSwitcher/src/: .gitignore  AnalyzeTyped.h  CAutoProcMonitor.h  CClipWorker.h  CMainWorker.cpp  CMainWorker.h  CMainWorkerMsg.h  CaseAnalazer.h  ConfigData.h  ConfigData_hk.h  CoreWorker.h  CycleRevertList.h  Dispatcher.cpp  Dispatcher.h  EnableHolder.h  GuiWorker.h  Hooker.cpp  Hooker.h  HookerKeyboard.cpp  HookerThread.h  IconManager.h  InjectSkipper.h  InputSender.cpp  InputSender.h  KeyTools.cpp  KeyTools.h  KeysCurState.h  KeysStruct.h  Localizator.h  Notificator.h  ProcDll.h  RemoteSkipper.h  Settings.cpp  Settings.h  SettingsGui.h  SimpleSwitcher.vcxproj  SwAutostart.h  SwGui.h  SwUtils.cpp  SwUtils.h  (+30 more)
SimpleSwitcher/src/Notificator/: Entry.h  Notificator.h
SimpleSwitcher/src/flags/: .gitignore  flag_res16.rc  flag_res32.rc  genres.py  genres_resized.py
SimpleSwitcher/src/gen_ui/: noname.cpp  noname.h  test_proj.fbp
SimpleSwitcher/src/gui/: FloatPanel.h  IconManager.h  Tray.h  decent_app.cpp  decent_gui.cpp  decent_gui.h  info.txt  main_app.cpp  main_gui.cpp  noname.cpp  noname.h  set_hk.cpp  set_hk.h  test_proj.fbp  wxUtils.h
SimpleSwitcher/src/gui2/: IconManager.h  SetHotKeyCombo.h  TrayIcon.h  gui_utils.h  main.cpp  main_impl.h  main_wnd.h  main_wnd_draw.cpp
SimpleSwitcher/src/gui2/Notificator/: Entry.h  Notificator.cpp  Notificator.h  Utils.h
SimpleSwitcher/src/libtools/: inc_basic.h
SimpleSwitcher/src/libtools/core/: Errors.h  Logger.h  WinInfo.h  core.h  winAutoCleanBase.h
SimpleSwitcher/src/libtools/gui/: TrayIcon.h
SimpleSwitcher/src/libtools/luawrap/: luawrap.h
SimpleSwitcher/src/libtools/startup/: reguser.h  scheduler.h
SimpleSwitcher/src/libtools/utils/: CAutoCleanupWin.h  CHotKey.h  COM_utils.h  CThreadQueue.h  ImGuiUtils.h  ImageHandler.h  Images.h  ImagesIco.h  MultiThreadQueue.h  TimePoint.h  VkNames.h  WinTimer.h  WinTray.h  accessibil.h  getpath.h  layout-utils.h  procstart.h  str_utils.h  utils-func.h  win_utils.h
SimpleSwitcher/src/old/: FixRAltHandler.h  TrayMenu.h  old.cpp  old.cpp-  rand.h
SimpleSwitcher/src/old/gui/: IconManager.h  TrayIcon.h  main_app.cpp  main_gui.cpp  noname.cpp
SimpleSwitcher/src/old/utils/: ShareMemory.h  parsecfg.h
SimpleSwitcher/src/res/: myres.rc  res.rc
SimpleSwitcher/src/tools/: accessibil.h  lay_notif.h
SimpleSwitcherBuild/: .gitignore  Build.cs  ProgramUtils.cs
cert/: CreateCARoot.cmd  SimpleSwitcher.pvk  checksum.sha256
flags/: info.txt
flags/scripts/: build-pngs.js
imgui/: imconfig.h  imgui.cpp  imgui.h  imgui_widgets.cpp
imgui/backends/: imgui_impl_dx11.cpp  imgui_impl_dx11.h  imgui_impl_win32.cpp
imgui_tiny_app/: Backends_Win.h  imgui.cpp
imgui_tiny_app/backends/: imgui_impl_win32.cpp
lib_units/: MappedFile.h  Singleton.h  TimePoint.h  UnorderedSmallMap.h
libtools/: WinMainParameters.h  inc_basic.h  libtools.vcxproj  libtools.vcxproj.filters  stdafx.cpp  stdafx.h
loader_dll/: CMakeLists.txt  CMakeSettings.json  d.def  main_dll.cpp  main_exe.cpp
loader_dll/src/: main_dll.cpp
localization/: GenerateCpp.cs  LocalizationBuild.slnx  Program.cs  Russian.h  Russian.json  collect_messages.cmd  he.mo  he.po  how_to_translate.txt  ru.mo
lualib/: lualib.vcxproj  lualib.vcxproj.filters
src/: AnalyzeTyped.h  CClipWorker.h  CMainWorker.cpp  CMainWorker.h  ConfigData.h  ConfigData_hk.h  CycleRevertList.h  Hooker.h  HookerKeyboard.cpp  HookerThread.h  IconManager.h  InjectSkipper.h  InputSender.cpp  InputSender.h  KeysCurState.h  KeysStruct.h  Localizator.h  ParseSnippet.h  Settings.cpp  Settings.h  SoundManager.h  SwAutostart.h  TrayIcon.h  WinMain.cpp  WorkerImplement.cpp  WorkerImplement.h  consts.h  globals.h  precompl.h  sw-base.h  ver.h
src/gui2/: ImagesTx.h  (+12 more)
verinc/: CheckSum.vcxproj.filters  main.cpp  stdafx.cpp  targetver.h  verinc.vcxproj
(+136 files in other folders)
